# AnyFunction

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  meson.build
include/: any.h  any_function.h  any_function_ref.h  any_value_function.h  decorated_graph.h  executor.h  graph.h  graph_execution.h  graph_new.h  higher_order.h  span.h  static_graph.h  tasks.h  traits.h  type.h  util.h
include/anyf/: any.h  any_function.h  borrowed_future.h  executor.h  future.h  graph.h  graph_execution.h  span.h  static_graph.h  traits.h  type.h  util.h
include/anyf/executor/: sequential_executor.h  task_executor.h  tbb_executor.h
include/executor/: sequential_executor.h  task_executor.h  tbb_executor.h
include/experimental/: any_function.h
src/: graph.cpp  graph_execution.cpp  graph_inner.h
test/: CMakeLists.txt  any_function_test.cpp  any_test.cpp  borrowed_future_test.cpp  executor_test.cpp  future_test.cpp  graph_test.cpp  higher_order_test.cpp  main.cpp  sentinal.h  static_graph_test.cpp  stress_test.cpp  test.h  test_main.cpp  type_test.cpp
